--- a/prep_litset.ipynb
+++ b/prep_litset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['lit_wos_20210701_20240531.csv',\n",
-       " 'lit_acm.csv',\n",
-       " 'lit_pubmed_2021-07-01_2024-05-31.csv']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select csv files to read\n",
+      "0: lit_WOK_2021-07-01_2024-05-31.csv\n",
+      "1: lit_pubmed_2021-07-01_2024-05-31.csv\n",
+      "2: lit_WOS_2021-07-01_2024-05-31.csv\n",
+      "3: lit_acm_2021-07-01_2024-05-31.csv\n",
+      "Data read successfully\n"
+     ]
     }
    ],
    "source": [
@@ -35,15 +35,25 @@
     "literature_files = [file for file in literature_files if file.endswith('.csv') and file.startswith('lit_')]\n",
     "\n",
     "# ask for user input to select csv files to read\n",
-    "# print('Select csv files to read')\n",
-    "# for i, file in enumerate(literature_files):\n",
-    "#     print(f'{i}: {file}')\n",
-    "# selected_files = input('Enter the number of the files separated by commas: ')\n",
-    "# selected_files = selected_files.split(',')\n",
-    "# selected_files = [int(i) for i in selected_files]\n",
+    "print('Select csv files to read')\n",
+    "for i, file in enumerate(literature_files):\n",
+    "    print(f'{i}: {file}')\n",
+    "selected_files = input('Enter the number of the files separated by commas: ')\n",
+    "selected_files = selected_files.split(',')\n",
+    "selected_files = [int(i) for i in selected_files]\n",
     "\n",
     "# read in selected files, have a new column that indicates the source of the data\n",
-    "literature_files"
+    "data = []\n",
+    "for i in selected_files:\n",
+    "    file = literature_files[i]\n",
+    "    df = pd.read_csv(f'literature/{file}')\n",
+    "    # the source is the second part of the file name\n",
+    "    source = file.split('_')[1].split('.')[0]\n",
+    "    df['source'] = source\n",
+    "    data.append(df)\n",
+    "\n",
+    "data = pd.concat(data)\n",
+    "print('Data read successfully')"
    ]
   },
   {
@@ -52,18 +62,176 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['wos', 'pubmed', 'acm.csv', 'pubmed']\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Abstract</th>\n",
+       "      <th>Authors</th>\n",
+       "      <th>Publication Type</th>\n",
+       "      <th>Publication Year</th>\n",
+       "      <th>PMID</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>DOI</th>\n",
+       "      <th>source</th>\n",
+       "      <th>SourceTitle</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>UT</th>\n",
+       "      <th>ISSN</th>\n",
+       "      <th>Author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Radon Exposure Assessment in Occupational and ...</td>\n",
+       "      <td>Radon is a naturally occurring noble radioacti...</td>\n",
+       "      <td>Kholopo M, Rathebe PC</td>\n",
+       "      <td>Journal Article, Review</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>38793821.0</td>\n",
+       "      <td>https://pubmed.ncbi.nlm.nih.gov/38793821</td>\n",
+       "      <td>10.3390/s24102966</td>\n",
+       "      <td>pubmed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air Quality Monitoring Using Low-Cost Sensors ...</td>\n",
+       "      <td>Air pollution poses a significant health hazar...</td>\n",
+       "      <td>Huda RK, Kumar P, Gupta R, Sharma AK, Toteja G...</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>38791837.0</td>\n",
+       "      <td>https://pubmed.ncbi.nlm.nih.gov/38791837</td>\n",
+       "      <td>10.3390/ijerph21050623</td>\n",
+       "      <td>pubmed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AWMF mold guideline \"Medical clinical diagnost...</td>\n",
+       "      <td>None.</td>\n",
+       "      <td>Hurrass J, Heinzow B, Walser-Reichenbach S, Au...</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>38756207.0</td>\n",
+       "      <td>https://pubmed.ncbi.nlm.nih.gov/38756207</td>\n",
+       "      <td>10.5414/ALX02444E</td>\n",
+       "      <td>pubmed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mapping sedentary behaviour (MAPS-B) in winter...</td>\n",
+       "      <td>Older adults who are frail are likely to be se...</td>\n",
+       "      <td>Rodrigues IB, Tariq S, Kouroukis A, Swance R, ...</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>38753692.0</td>\n",
+       "      <td>https://pubmed.ncbi.nlm.nih.gov/38753692</td>\n",
+       "      <td>10.1371/journal.pone.0290197</td>\n",
+       "      <td>pubmed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Frames of agency in a school with poor indoor-...</td>\n",
+       "      <td>Problems with schools' indoor-air quality are ...</td>\n",
+       "      <td>Finell E, Pyysiainen J, Walden A</td>\n",
+       "      <td>Journal Article</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>38739984.0</td>\n",
+       "      <td>https://pubmed.ncbi.nlm.nih.gov/38739984</td>\n",
+       "      <td>S1353-8292(24)00084-4</td>\n",
+       "      <td>pubmed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Title  \\\n",
+       "0  Radon Exposure Assessment in Occupational and ...   \n",
+       "1  Air Quality Monitoring Using Low-Cost Sensors ...   \n",
+       "2  AWMF mold guideline \"Medical clinical diagnost...   \n",
+       "3  Mapping sedentary behaviour (MAPS-B) in winter...   \n",
+       "4  Frames of agency in a school with poor indoor-...   \n",
+       "\n",
+       "                                            Abstract  \\\n",
+       "0  Radon is a naturally occurring noble radioacti...   \n",
+       "1  Air pollution poses a significant health hazar...   \n",
+       "2                                              None.   \n",
+       "3  Older adults who are frail are likely to be se...   \n",
+       "4  Problems with schools' indoor-air quality are ...   \n",
+       "\n",
+       "                                             Authors         Publication Type  \\\n",
+       "0                              Kholopo M, Rathebe PC  Journal Article, Review   \n",
+       "1  Huda RK, Kumar P, Gupta R, Sharma AK, Toteja G...          Journal Article   \n",
+       "2  Hurrass J, Heinzow B, Walser-Reichenbach S, Au...          Journal Article   \n",
+       "3  Rodrigues IB, Tariq S, Kouroukis A, Swance R, ...          Journal Article   \n",
+       "4                   Finell E, Pyysiainen J, Walden A          Journal Article   \n",
+       "\n",
+       "   Publication Year        PMID                                       URL  \\\n",
+       "0              2024  38793821.0  https://pubmed.ncbi.nlm.nih.gov/38793821   \n",
+       "1              2024  38791837.0  https://pubmed.ncbi.nlm.nih.gov/38791837   \n",
+       "2              2024  38756207.0  https://pubmed.ncbi.nlm.nih.gov/38756207   \n",
+       "3              2024  38753692.0  https://pubmed.ncbi.nlm.nih.gov/38753692   \n",
+       "4              2024  38739984.0  https://pubmed.ncbi.nlm.nih.gov/38739984   \n",
+       "\n",
+       "                            DOI  source SourceTitle Keywords   UT ISSN Author  \n",
+       "0             10.3390/s24102966  pubmed         NaN      NaN  NaN  NaN    NaN  \n",
+       "1        10.3390/ijerph21050623  pubmed         NaN      NaN  NaN  NaN    NaN  \n",
+       "2             10.5414/ALX02444E  pubmed         NaN      NaN  NaN  NaN    NaN  \n",
+       "3  10.1371/journal.pone.0290197  pubmed         NaN      NaN  NaN  NaN    NaN  \n",
+       "4         S1353-8292(24)00084-4  pubmed         NaN      NaN  NaN  NaN    NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the word after the second underscore\n",
-    "extracted_words = [name.split('_')[1] if len(name.split('_')) > 1 else None for name in literature_files]\n",
-    "\n",
-    "print(extracted_words)"
+    "data.head()"
    ]
   },
   {
