--- a/prep_litset.ipynb
+++ b/prep_litset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,12 @@
     "# print('Data read successfully')\n",
     "\n",
     "# read in rawset\n",
-    "data = pd.read_csv('rawset.csv')"
+    "data = pd.read_csv('literature/rawset.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "4   10.1016/j.heliyon.2024.e29398        NaN    WOK      NaN   NaN  NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -529,6 +529,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Eliminate duplicates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "is_duplicate\n",
+      "False    4541\n",
+      "True       34\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# are there duplicate titles?\n",
+    "print(data['Title'].duplicated().sum())\n",
+    "# mark duplicates and the original\n",
+    "data['is_duplicate'] = data['Title'].duplicated(keep=False)\n",
+    "print(data['is_duplicate'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_duplicate\n",
+      "False    4558\n",
+      "Name: count, dtype: int64\n",
+      "(4558, 14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if the duplicate is from the same source, keep the first one\n",
+    "data = data[~(data['is_duplicate'] & data.duplicated(subset=['Title', 'source']))]\n",
+    "# if the duplicate is from different sources, keep the one that is not from WOK\n",
+    "data = data[~(data['is_duplicate'] & (data['source'] == 'WOK'))]\n",
+    "data['is_duplicate'] = data['Title'].duplicated(keep=False)\n",
+    "print(data['is_duplicate'].value_counts())\n",
+    "# if there are no more duplicates, drop the is_duplicate column\n",
+    "if not data['is_duplicate'].any():\n",
+    "    data = data.drop(columns=['is_duplicate'])\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "source\n",
+      "acm       3533\n",
+      "WOK        736\n",
+      "pubmed     289\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the number of rows for each source\n",
+    "print(data['source'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### IC3, IC4, EC3, EC6"
    ]
   },
@@ -546,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +672,6 @@
       "Real-Time Insights, Air Pollution Monitoring, ThingSpeak, Adaptability, MQTT, Collective IoT\n",
       "indoor environmental quality (IEQ), air quality, user interface, eco-feedback\n",
       "construction workforce safety, intelligent technologies, occupational health and safety, smart wearables, SEM, T-O-E\n",
-      "Electric field sensing, capacitive sensing, body-area network, body-area sensing, human activity recognition, human machine interaction, wearable\n",
       "IEQ, Time series prediction, LSTM, Neural network, Machine learning\n",
       "indoor air quality, sick building syndrome, occupant health, environmental psychology, phenomenology\n",
       "Embedded machine learning, Edge computing, Indoor air quality monitoring, Real-time systems, Sensor analysis, Data management and analytics\n",
@@ -604,7 +686,6 @@
       "indoor environmental quality monitoring, IoT sensing, low-cost sensors, IEQ field measurements, calibration methods\n",
       "Remote Sensing, Discomfort Index, Land Surface Temperature, MODIS\n",
       "Particulate matter, PM2.5 constituents, Allergic rhinitis, Oxidative stress, Symptoms, Quality of life\n",
-      "behavior complexity, data complexity, frailty, entropy, smart homes, CGR/USM\n",
       "triazacoronene, bimodal sensor, on-offfluorescent sensor, prototype chemiresistive gas sensor, volatile organic compounds, rapid response\n",
       "intelligent monitoring, indoor poultry house, cloud data, carbon emission, IoT sensors\n",
       "Particulate matter pollution, Elderly residents, Female, Cognitive impairment, Gut microbiota, Gut-brain axis\n",
@@ -675,7 +756,6 @@
       "Thermal comfort, Globe sensor, PMV, Adaptive model\n",
       "healthcare, intelligent reflect surfaces, radio frequency sensing, specific absorption rates\n",
       "Personal exposure, Mobile measurement, Low-cost sensor, Street-level modelling, Particulate matter, Black carbon\n",
-      "Built environment, Indoor Air Quality, Post-occupancy Analysis, Particulate Matter, Ventilation\n",
       "Vibration sensing, Health monitoring, Bionics information processing, Gait activity recognition, Occupant location, Smart home system\n",
       "Personal monitors, Urban stressors, Wearable sensors\n",
       "Indoor air quality, Gases concentration, Particulate matter (PM), CO2, Air temperature, Air humidity, COTS devices, COTS sensors\n",
@@ -691,7 +771,6 @@
       "Structural health monitoring, Nondestructive testing, Vibrations, Large structures, Computer vision, Feature detection and matching, KAZE algorithm, Parallel processing\n",
       "Fungi sensor, Aspergillus niger spore, M13 bacteriophage, Colorimetric detection, Antibody alternative\n",
       "Mutual human activity recognition, Wi-Fi based HAR, Remote monitoring, Smart home, Attention BiGRU, Deep learning\n",
-      "Smartphones, mobile sensing, mental health, indoor localization\n",
       "Coptotermes, Reticulitermes, chemotaxa, environmental monitoring, indoor air health hazards, insect pest detection, species discrimination, subterranean termites, termite chemical groups, toxic fumes, volatile organic compounds (VOCs)\n",
       "Indoor environmental quality (IEQ), Occupant satisfaction, Building Renovation, Subjective assessment, Field measurements\n",
       "Mobile gas sensing, hazardous gas detection, volatile organic compounds, environmental gases, gas sensors, toxic gases.\n",
@@ -902,7 +981,6 @@
       "VOCs, FTIR, sensor, accuracy, ppm(v), styrene, isopropanol, acetone, ethanol\n",
       "volatile organic compounds, breath analysis, dampness exposure, atopic diseases\n",
       "Internet of things, machine learning, recurrent neural networks humidity sensor, intelligent internal air quality monitoring system\n",
-      "Cognitive assessment, smart-home, healthcare, location data mining\n",
       "Indoor air quality, Empirical mode decomposition, Long short-term memory, Squeeze and excitation networks, Soft sensor, Health risk warning assessment\n",
       "dust generator, Arduino, dust sensor, airborne dust concentration\n",
       "automotive catalysts, emission of toxic gases, temperature sensor\n",
@@ -924,7 +1002,6 @@
       "indoor air quality, particulate matter, public health, housing\n",
       "Formaldehyde, Colorimetric, Silica nanoparticle, Digital image analysis, Paper-based analytical device\n",
       "bio-sensors, droplet and airborne diseases, Internet of Things, pneumonia, sustainable life, volatile organic compounds, wireless body area network, wireless sensor network\n",
-      "airflow, smart environment, acoustic sensing, signal processing, privacy\n",
       "Living room, air quality, volatile organic compounds, particulate matters, elemental composition, health risk assessment\n",
       "indoor environmental quality, occupant productivity, indoor air comfort, response surface methodology, occupant health\n",
       "Portable sensor technologies, Multi-pollutant personal exposure, Automated time-activity classification\n",
@@ -968,7 +1045,6 @@
       "Sensors, OFDM, Wireless fidelity, Monitoring, Classification algorithms, Radiofrequency identification, Performance evaluation, Human activity detection, indoor positioning, occupancy monitoring, localisation\n",
       "Thermal Image, Temperature Variation, Graph neural network, Deep clustering, Residential Buildings, Building elements\n",
       "volatile organic compounds, aggregation-induced luminescence, UiO-66, chemical sensing, polyacrylate\n",
-      "Acoustic Sensing, Smart Building, Pedestrian Identification, Replay Resistance\n",
       "air quality monitoring, Singular Spectral Analysis, time series modelling, treepartition modelling, forecasting, anomalies detection\n",
       "pervasive computing, home monitoring, cognitive ability, dementia, mild cognitive impairment, digital biomarkers, digital measures\n",
       "indoor environmental quality (IEQ) logger, Raspberry Pi, sensors, Internet of Things (IoT) thermal comfort, indoor air quality (IAQ), visual comfort, acoustic comfort, indoor global comfort index (IGCI), MATLAB, SPSS\n",
@@ -1640,6 +1716,7 @@
       "Image relighting, image-based rendering, multi-view, deep learning\n",
       "image quality evaluation, image quality enhancement, image captioning, generative models evaluation, GAN\n",
       "Relevant feedback, Person Re-identification, Cross-modality\n",
+      "Cognitive assessment, smart-home, healthcare, location data mining\n",
       "Turn-by-turn navigation, orientation &amp; mobility, navigation assistance\n",
       "retargeting, perception, Virtual reality\n",
       "Geomagnetic field, site survey, fingerprint database construction, sequence matching, machine learning, speed estimation\n",
@@ -1877,7 +1954,6 @@
       "bayesian modelling, building controls, building ventilation, machine learning, occupant thermal satisfaction, thermal comfort, uncertainty quantification\n",
       "consumer-grade sensors, indoor air quality, surveys\n",
       "3D airflow sensor, HVAC, IWSN, energy efficiency\n",
-      "batteryless, energy management, meta reinforcement learning\n",
       "cold start, personalized environments, recommender systems, reinforcement learning, thermal comfort, warm start\n",
       "building automation, multi-agent systems, semantic data\n",
       "Single instruction multiple data, hybrid multiplier-divider, bio-signal processing, image processing, unmanned air vehicles, Mitchell’s algorithm, high-throughput, energy-efficiency\n",
@@ -2200,7 +2276,6 @@
       "access control, phase-based ranging, relay attack\n",
       "authentication, identification, physical-layer security, radio frequency fingerprint\n",
       "localization, blind hockey, auditory feedback, blind athletics, Accessible technologies\n",
-      "convolutional neural network, millimeter-wave, picocells, transfer learning\n",
       "capacity estimation, cellular network, conges- tion control, elemetry, nextg system, video streaming\n",
       "design pedagogy, Internet studies, masculinity, silicon valley, Design history\n",
       "IW Smart Wheelchair model, PWD, People with disability, Sensors. Intelligent wheelchair (IW), Smart wheelchair, wheelchair user\n",
@@ -4152,82 +4227,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# relevant keywords\n",
-    "ic_words = ['health', 'well-being', 'wellbeing', 'productivity', 'mental health', \n",
-    "    'physical health', 'work-life balance', 'quality of life', 'happiness', \n",
-    "    'stress', 'job satisfaction', 'work performance', 'employee well-being', 'occupant well-being', 'office',\n",
-    "    'wellness', 'work environment', 'longitudinal study', 'long-term', \n",
-    "    'cohort study', 'indoor', 'indoor air quality' ]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Eliminate duplicates."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n",
-      "is_duplicate\n",
-      "False    4553\n",
-      "True       34\n",
+      "is_ic\n",
+      "False    3201\n",
+      "True     1357\n",
       "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "# are there duplicate titles?\n",
-    "print(data['Title'].duplicated().sum())\n",
-    "# mark duplicates and the original\n",
-    "data['is_duplicate'] = data['Title'].duplicated(keep=False)\n",
-    "print(data['is_duplicate'].value_counts())"
+    "# relevant keywords\n",
+    "ic_words = ['health', 'well-being', 'wellbeing', 'productivity', 'mental health', \n",
+    "    'physical health', 'health', 'work-life balance', 'quality of life', 'happiness', \n",
+    "    'stress', 'job satisfaction', 'work performance', 'office', 'comfort',\n",
+    "    'wellness', 'work environment', 'longitudinal study', 'long-term', 'IAQ', 'IEQ', \n",
+    "    'cohort study', 'indoor', 'indoor air quality', 'indoor environment', 'indoor environment quality', \n",
+    "    'privacy', 'wearable', 'multimodal', 'home']\n",
+    "\n",
+    "# check if the title or keywords contain any of the strings in ic_words\n",
+    "data['is_ic'] = data['Title'].apply(lambda x: any(word in x.lower() for word in ic_words))\n",
+    "# check keywords only if it is not nan\n",
+    "data['is_ic'] = data['is_ic'] | (data['Keywords'].apply(lambda x: any(word in str(x).lower() for word in ic_words) if not pd.isna(x) else False))\n",
+    "print(data['is_ic'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is_duplicate\n",
-      "False    4570\n",
-      "Name: count, dtype: int64\n",
-      "(4570, 14)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# if the duplicate is from the same source, keep the first one\n",
-    "data = data[~(data['is_duplicate'] & data.duplicated(subset=['Title', 'source']))]\n",
-    "# if the duplicate is from different sources, keep the one that is not from WOK\n",
-    "data = data[~(data['is_duplicate'] & (data['source'] == 'WOK'))]\n",
-    "data['is_duplicate'] = data['Title'].duplicated(keep=False)\n",
-    "print(data['is_duplicate'].value_counts())\n",
-    "# if there are no more duplicates, drop the is_duplicate column\n",
-    "if not data['is_duplicate'].any():\n",
-    "    data = data.drop(columns=['is_duplicate'])\n",
-    "print(data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -4235,8 +4267,8 @@
      "output_type": "stream",
      "text": [
       "source\n",
-      "acm       3542\n",
-      "WOK        739\n",
+      "acm       3533\n",
+      "WOK        736\n",
       "pubmed     289\n",
       "Name: count, dtype: int64\n"
      ]
@@ -4249,7 +4281,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1357, 14)\n",
+      "source\n",
+      "acm       667\n",
+      "WOK       497\n",
+      "pubmed    193\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# drop rows where is_ic is False\n",
+    "data = data[data['is_ic']]\n",
+    "data = data.drop(columns=['is_ic'])\n",
+    "print(data.shape)\n",
+    "print(data['source'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_framework\n",
+      "False    1337\n",
+      "True       20\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many papers have the word framework in the title\n",
+    "data['is_framework'] = data['Title'].apply(lambda x: 'framework' in x.lower())\n",
+    "print(data['is_framework'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
